# cargo-copilot

./: Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
src/: cargo.rs  main.rs  server.rs
src/tools/: cargo_dependencies.rs  cargo_doc_get.rs  cargo_doc_index.rs  cargo_doc_overview.rs  mod.rs
