[package]
name = "copilot"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cargo-copilot"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.11.0", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cargo_metadata = "0.18"
